# Eno-Voice-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_puppeteer.js  test_flutter_cors.html  test_flutter_ws_token.html  ws_cors.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_onboarding_completed.py  0003_add_auth_tables.py  0004_add_refresh_tokens.py  0005_auth_recovery_verify.py  0006_add_learner_preferences_memory.py  0007_add_google_auth_fields.py
backend/english_tech/: __init__.py  config.py  db.py  db_models.py  main.py
backend/tests/: test_health.py  test_lesson_flows.py
deploy/: .env.production.example  Caddyfile
deploy/systemd-user/: english-tech-api.service  english-tech-postgres.service  english-tech-redis.service
docs/: api_contract.md  architecture.md  curriculum_strategy.md  flutter_integration.md  implementation_phase_plan.md  production_deployment.md  voice_first_refactor.md
flutter_client/: .gitignore  README.md  pubspec.yaml  test_audio_check.dart
flutter_client/lib/: main.dart
flutter_client/linux/: CMakeLists.txt
flutter_client/test/: widget_test.dart
flutter_client/web/: index.html  manifest.json
flutter_client/windows/: CMakeLists.txt
scripts/: migrate_json_to_db.py  preload_speech_assets.py  validate_templates.py
scripts/local_services/: install_local_postgres_redis.sh  run_backend_with_local_stack.sh  (+4 more)
tests/: test_coach_route.py  test_google_auth.py  test_local_db_bootstrap.py  test_production_policy.py
(+83 files in other folders)
