[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "english-tech"
version = "0.1.0"
description = "Curriculum-driven English learning voice backend scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "jinja2>=3.1.2,<4",
  "aiofiles>=23.2.1,<25",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.16,<2",
  "psycopg[binary]>=3.2,<4",
  "redis>=5,<6",
  "python-multipart>=0.0.9,<1",
  "numpy>=1.26,<3",
  "faster-whisper>=1.1,<2",
  "google-auth>=2.38,<3",
  "loguru>=0.7.2,<1",
  "requests>=2.32,<3",
  "slowapi>=0.1.9,<1",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
